--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -5,6 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Professor @ViewData["Professor"]</p>
+
 <address>
-    <strong>Mais informações: </strong><a href="http://educandoweb.com.br">Educandoweb</a>
+    <strong>More information: </strong> <a href="http://educandoweb.com.br">Educandoweb.com.br</a>
 </address>
