--- a/SalesWebMvc/Views/Shared/Error.cshtml
+++ b/SalesWebMvc/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SalesWebMvc.Models.ViewModels.ErrorViewModel
 @{
-    ViewData["Title"] = "Error!";
+    ViewData["Title"] = "Error";
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
