--- a/SalesWebMvc/Views/Sellers/Delete.cshtml
+++ b/SalesWebMvc/Views/Sellers/Delete.cshtml
@@ -1,4 +1,4 @@
-@model SalesWebMvc.Models.Seller
+﻿@model SalesWebMvc.Models.Seller
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,7 +6,7 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are your sure you want to delete this?</h3>
 
 <div>
     <h4>Seller</h4>
@@ -28,18 +28,19 @@
             @Html.DisplayNameFor(model => model.BirthDate)
         </dt>
         <dd>
-            @Html.DisplayNameFor(model => model.BirthDate)
+            @Html.DisplayFor(model => model.BirthDate)
         </dd>
         <dt>
-            @Html.DisplayFor(model => model.BaseSalary)
+            @Html.DisplayNameFor(model => model.BaseSalary)
         </dt>
         <dd>
-            @Html.DisplayNameFor(model => model.BaseSalary)
+            @Html.DisplayFor(model => model.BaseSalary)
         </dd>
     </dl>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger"/>
+        <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
