--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -1,4 +1,4 @@
-@model SalesWebMvc.Models.Seller
+﻿@model SalesWebMvc.Models.Seller
 
 @{
     ViewData["Title"] = "Details";
@@ -44,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">Edit</a>
-    <a asp-action="Index" class="btn btn-default">Back to list</a>
+    <a asp-action="Index">Back to list</a>
 </div>
